crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__operator__equals_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/equals_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1)
      (method method [(local this @0)] []
         (block)))
   (var foo (global @2) (call +2 (global Foo @1)))
   (var fooMethod (global @3) (attr (global foo @2) method))
   (print (== (global fooMethod @3) (global fooMethod @3)))
   (print (== (attr (global foo @2) method) (attr (global foo @2) method))))

----- stderr -----
