crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__operator__greater_nonnum_num.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/greater_nonnum_num.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (expr (> "1" 1.0)))

----- stderr -----
